@@ -1060,7 +1060,7 @@ DNAT       net        loc:192.168.1.3 tcp       4000:4100</programlisting>
     <para>Also, unless otherwise documented, a port list can be preceded by
     '!' to specify "All ports except these" (e.g., "!80,443").</para>
 
-    <para>Port lists appearing in the <ulink
+    <para>Prior to Shorewall 4.4.4, port lists appearing in the <ulink
     url="manpages/shorewall-routestopped.html">/etc/shorewall/routestopped</ulink>
     file may specify no more than 15 ports; port ranges appearing in a list
     count as two ports each.</para>
