@@ -204,6 +204,9 @@ None.
     while the RPMs do not depend on the logrotate package, RPM installation
     will produce an error message if that package is not installed.
 
+2)  The limit of 15 entries in a port list has been relaxed in
+    /etc/shorewall/routestopped.
+
 ----------------------------------------------------------------------------
                 N E W   F E A T U R E S   I N   4 . 4 . 0
 ----------------------------------------------------------------------------
