@@ -6,6 +6,8 @@ Changes in Shorewall 4.4.4
 
 3)  Add logrotate scripts.
 
+4)  Allow long port lists in /etc/shorewall/routestopped.
+
 Changes in Shorewall 4.4.3
 
 1)  Move Debian INITLOG initialization to /etc/default/shorewall
